<resources>
    <string name="app_name">JeuCalculMental</string>
    <string name="text_play">Jouer</string>
    <string name="text_score">Meilleurs Scores</string>
    <string name="about">À propos</string>
    <string name="text_developed_by">Développé par</string>
    <string name="premier">PREMIER</string>
    <string name="deuxieme">DEUXIEME</string>
    <string name="troisieme">TROISIEME</string>
    <string name="reglages">Réglages</string>
    <string name="titlesettings">Réglages</string>
    <string name="musique">Musique</string>
    <string name="volume">Volume</string>
    <string name="next_music">Musique suivante</string>
    <string name="passer">Passer</string>
    <string name="HighScores">Meilleurs Scores</string>
    <string name="text_bonus">Fonctionnalités Bonus</string>
    <string name="bonus1">
        Score progressBar , un clavier personnalisé et combo de points.
    </string>
    <string name="bonus2">
        Musiques de fond et effets sonores, reglable dans les paramètres.
    </string>
    <string name="bonus3">
        Animation de fond sur ActivityAbout.
    </string>
</resources>