<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    tools:context=".MainActivity">

    <!-- Bouton de réglage de la musique en haut à gauche -->
    <Button
        android:id="@+id/btnMusicSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_color1"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/reglages"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"/>

    <!-- Conteneur pour centrer les éléments -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnStartGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_color1"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="startGame"
            android:text="@string/text_play" />

        <Button
            android:id="@+id/btnHighScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_color2"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="viewHighScore"
            android:text="@string/text_score" />

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_color2"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/about" />

    </LinearLayout>

</RelativeLayout>
